@startuml

title __WAITNOTIFY's Class Diagram__\n

  namespace com.juc.waitnotify {
    class com.juc.waitnotify.DecreaseThread {
        + run()
        ~ DecreaseThread()
    }
  }
  

  namespace com.juc.waitnotify {
    class com.juc.waitnotify.IncreaseThread {
        + run()
        ~ IncreaseThread()
    }
  }
  

  namespace com.juc.waitnotify {
    class com.juc.waitnotify.MyTest1 {
        {static} + main()
    }
  }
  

  namespace com.juc.waitnotify {
    class com.juc.waitnotify.WaitNotifyTest {
        + counter : int
        + AddCounterOne()
        + DecreaseCounterOne()
        + setCounter()
    }
  }
  

  com.juc.waitnotify.DecreaseThread o-- com.juc.waitnotify.WaitNotifyTest : waitNotifyTest
  com.juc.waitnotify.IncreaseThread o-- com.juc.waitnotify.WaitNotifyTest : waitNotifyTest


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
